Generate KML visualizations for scenarios in sequence view artifact

--- a/schemas/monitoring/uss_qualifier/configurations/configuration/SequenceViewConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/SequenceViewConfiguration.json
@@ -10,6 +10,10 @@
     "redact_access_tokens": {
       "description": "When True, look for instances of \"Authorization\" keys in the report with values starting \"Bearer \" and redact the signature from those access tokens",
       "type": "boolean"
+    },
+    "render_kml": {
+      "description": "When True, visualize geographic data for each scenario as a KML file.",
+      "type": "boolean"
     }
   },
   "type": "object"
